--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^1.3.4",
+    "buefy": "^0.9.23",
     "core-js": "^3.8.3",
     "uuid": "^9.0.0",
     "vue": "^2.6.14",
